--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "inputmask": "^5.0.6",
     "jquery": "^3.6.0",
     "swiper": "^7.3.4",
+    "filepond": "^4.29.0",
+    "filepond-plugin-image-preview": "^4.6.8",
+    "jquery-filepond": "^1.0.0",
     "wowjs": "^1.1.3"
   }
 }
